Round out tests and clean up

--- a/tests/client.sass
+++ b/tests/client.sass
@@ -1,5 +1,12 @@
 @import "bourbon"
 
+body
+  font-family: $helvetica
+
+button
+  +button
+
 .bourbon-import-builtin-box-sizing
   display: block
   +box-sizing(border-box)
+  margin: golden-ratio(14px,  1)
